force-app/main/default/objects/Bureau_Highmark__c/Bureau_Highmark__c.object-meta.xml
<CustomObject>
    <label>Bureau Highmark</label>
    <nameField>
        <label>Bureau Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bureau Highmarks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>