force-app/main/default/objects/Bureau_Highmark__c/fields/creditInqPurpsTypDesc__c.field-meta.xml
<CustomField>
    <fullName>creditInqPurpsTypDesc__c</fullName>
    <label>CreditInqPurpsTypDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>