force-app/main/default/objects/Bureau_Highmark__c/fields/CreditInqPurpsType__c.field-meta.xml
<CustomField>
    <fullName>CreditInqPurpsType__c</fullName>
    <label>CreditInqPurpsType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>