force-app/main/default/objects/Bureau_Highmark__c/fields/CreditInquiryStage__c.field-meta.xml
<CustomField>
    <fullName>CreditInquiryStage__c</fullName>
    <label>CreditInquiryStage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>