force-app/main/default/objects/Bureau_Highmark__c/fields/CreditReqType__c.field-meta.xml
<CustomField>
    <fullName>CreditReqType__c</fullName>
    <label>CreditReqType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>