force-app/main/default/objects/Bureau_Highmark__c/fields/CreditRptId__c.field-meta.xml
<CustomField>
    <fullName>CreditRptId__c</fullName>
    <label>CreditRptId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>