force-app/main/default/objects/Bureau_Highmark__c/fields/CreditRptTrnDtTm__c.field-meta.xml
<CustomField>
    <fullName>CreditRptTrnDtTm__c</fullName>
    <label>CreditRptTrnDtTm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>