force-app/main/default/objects/Bureau_Highmark__c/fields/Highmark_Score__c.field-meta.xml
<CustomField>
    <fullName>Highmark_Score__c</fullName>
    <label>Highmark Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>