force-app/main/default/objects/Bureau_Highmark__c/fields/Loan_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Loan_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Applicant</label>
    <referenceTo>Loan_Applicant__c</referenceTo>
    <relationshipLabel>Bureau Highmarks</relationshipLabel>
    <relationshipName>Bureau_Highmarks</relationshipName>
    <type>Lookup</type>
</CustomField>