force-app/main/default/objects/Bureau_Highmark__c/fields/LoanAmount__c.field-meta.xml
<CustomField>
    <fullName>LoanAmount__c</fullName>
    <label>LoanAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>