force-app/main/default/objects/Bureau_Highmark__c/fields/LosAppId__c.field-meta.xml
<CustomField>
    <fullName>LosAppId__c</fullName>
    <label>LosAppId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>