force-app/main/default/objects/Bureau_Highmark__c/fields/MbrId__c.field-meta.xml
<CustomField>
    <fullName>MbrId__c</fullName>
    <label>MbrId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>